# vk_internship_2025

./: .gitignore  CMakeLists.txt  readme.md
src/: graph.cpp  graph.h  main.cpp  utils.cpp  utils.h
